Final fix for docker image

--- a/Dockerfile.buildkit
+++ b/Dockerfile.buildkit
@@ -19,6 +19,7 @@ ARG VERSION=dev
 ARG COMMIT=none
 ARG DATE=unknown
 ARG REPOSITORY=unknown
+ARG APP_NAME=sish
 
 RUN go generate ./...
 RUN go test ./...
@@ -29,25 +30,25 @@ LABEL maintainer="Antonio Mika <me@antoniomika.me>"
 COPY --from=builder /go/pkg/mod /mod
 COPY --from=builder /root/.cache/go-build /go-build
 
-FROM builder
+FROM builder as build-image
 
 ARG TARGETOS
 ARG TARGETARCH
 
 ENV GOOS=${TARGETOS} GOARCH=${TARGETARCH}
 
-RUN go build -o /go/bin/sish -ldflags="-s -w -X github.com/${REPOSITORY}/cmd.Version=${VERSION} -X github.com/${REPOSITORY}/cmd.Commit=${COMMIT} -X github.com/${REPOSITORY}/cmd.Date=${DATE}"
+RUN go build -o /go/bin/${APP_NAME} -ldflags="-s -w -X github.com/${REPOSITORY}/cmd.Version=${VERSION} -X github.com/${REPOSITORY}/cmd.Commit=${COMMIT} -X github.com/${REPOSITORY}/cmd.Date=${DATE}"
 
 FROM scratch as release
 LABEL maintainer="Antonio Mika <me@antoniomika.me>"
 
 WORKDIR /app
 
-COPY --from=builder /emptydir /tmp
-COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-COPY --from=builder /app/deploy/ /app/deploy/
-COPY --from=builder /app/README* /app/LICENSE* /app/
-COPY --from=builder /app/templates /app/templates
-COPY --from=builder /go/bin/sish /app/sish
+COPY --from=build-image /emptydir /tmp
+COPY --from=build-image /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+COPY --from=build-image /app/deploy/ /app/deploy/
+COPY --from=build-image /app/README* /app/LICENSE* /app/
+COPY --from=build-image /app/templates /app/templates
+COPY --from=build-image /go/bin/ /app/
 
 ENTRYPOINT ["/app/sish"]
