Optimize how the proxy protocol header is read

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,9 @@
         "--https=false",
         "--authentication=false",
         "--tcp-aliases=true",
-        "--proxy-protocol=false",
+        "--proxy-protocol=true",
+        "--proxy-protocol-listener=true",
+        "--proxy-protocol-use-timeout=true",
         "--log-to-client=true",
         "--admin-console=true",
         "--service-console=true",
