Added support for SNI proxying on HTTPS port

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,18 +15,22 @@
       "args": [
         "--debug=true",
         "--http-address=:8081",
+        "--https-address=:8082",
         "--ssh-address=:22222",
+        "--sni-proxy-https=true",
         "--domain=testing.ssi.sh",
         "--bind-random-subdomains=false",
         "--bind-random-ports=false",
         "--bind-random-aliases=false",
+        "--bind-any-host=true",
         "--sni-proxy=true",
         "--tcp-aliases=true",
-        "--https=false",
+        "--https=true",
         "--authentication=false",
         "--proxy-protocol=true",
         "--proxy-protocol-listener=true",
         "--proxy-protocol-use-timeout=true",
+        "--proxy-protocol-version=userdefined",
         "--log-to-client=true",
         "--admin-console=true",
         "--service-console=true",
