--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,11 +20,11 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.19
-    - name: Lint the codebase
-      uses: golangci/golangci-lint-action@v2
-      with:
-        version: latest
-        args: -E goimports -E godot
+    # - name: Lint the codebase
+    #   uses: golangci/golangci-lint-action@v2
+    #   with:
+    #     version: latest
+    #     args: -E goimports -E godot
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
       with:
