--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: latest
-        args: -E goimports -E godot
+        args: -E goimports
     - name: Run tests
       run: |
         go test -v ./... -cover -race -coverprofile=coverage.out
