--- a/config.example.yml
+++ b/config.example.yml
@@ -1,4 +1,5 @@
 admin-console: false
+replace-host: ""
 admin-console-token: ""
 alias-load-balancer: false
 append-user-to-subdomain: false
@@ -21,6 +22,7 @@ bind-random-aliases: true
 bind-random-aliases-length: 3
 bind-random-ports: true
 bind-random-subdomains: true
+bind-verbose: true
 bind-random-subdomains-length: 3
 bind-root-domain: false
 cleanup-unauthed: true
@@ -50,6 +52,7 @@ https-ondemand-certificate-email: ""
 https-port-override: 0
 https-request-port-override: 0
 idle-connection: true
+allow-password-auth: true
 idle-connection-timeout: 5s
 load-templates: true
 load-templates-directory: templates/*
