Ensure wildcard isn't too greedy and fix sni on https port

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,7 +38,9 @@
         "--http-load-balancer=true",
         "--tcp-load-balancer=true",
         "--alias-load-balancer=true",
-        "--sni-load-balancer=true"
+        "--sni-load-balancer=true",
+        "--force-https",
+        "--bind-wildcards"
       ]
     }
   ]
