Updated go deps and general package work (#279)
* Updated go deps and general package work

* Update used go version to 1.21

* feat: wildcard support

* Fixed lint

* feat: auto redirect to https

* Use proper hostname in redirect

* Add wildcards to sni proxy

* Ensure wildcard isn't too greedy and fix sni on https port

* Code cleanup

---------

Co-authored-by: Son Nguyen <sonntuet1997@gmail.com>

--- a/config.example.yml
+++ b/config.example.yml
@@ -23,6 +23,7 @@ bind-random-ports: true
 bind-random-subdomains: true
 bind-random-subdomains-length: 3
 bind-root-domain: false
+bind-wildcards: false
 cleanup-unauthed: true
 cleanup-unauthed-timeout: 5s
 cleanup-unbound: false
@@ -31,6 +32,8 @@ config: config.yml
 debug: false
 debug-interval: 2s
 domain: ssi.sh
+force-all-https: false
+force-https: false
 force-requested-aliases: false
 force-requested-ports: false
 force-requested-subdomains: false
