Add password authentication request validation
This adds a password-based authentication mechanism under the option
`--authentication-password-request-url`, which functions similarly
to `--authentication-key-request-url`, but takes a password
instead of a public key.

Closes #322

--- a/config.example.yml
+++ b/config.example.yml
@@ -9,6 +9,8 @@ authentication-key-request-url: ""
 authentication-keys-directory: deploy/pubkeys/
 authentication-keys-directory-watch-interval: 200ms
 authentication-password: ""
+authentication-password-request-url: ""
+authentication-password-request-timeout: 5s
 banned-aliases: ""
 banned-countries: ""
 banned-ips: ""
