--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,8 +106,8 @@ jobs:
         cache-from: |
           ${{ github.repository }}-cache
         cache-to: |
-          type=registry,ref=${{ github.repository }}-cache,mode=max
-        platforms: ${{ env.PLATFORMS }}
+          ${{ github.actor == github.repository_owner && format('type=registry,ref={0}-cache,mode=max', github.repository) || '' }}
+        platforms: ${{ github.actor == github.repository_owner && env.PLATFORMS || 'linux/amd64' }}
         build-args: |
           DATE=${{ fromJSON(steps.buildmeta.outputs.json).labels['org.opencontainers.image.created'] }}
           VERSION=${{ fromJSON(steps.buildmeta.outputs.json).labels['org.opencontainers.image.version'] }}
