Make welcome message configurable
The message displayed to the user upon connection (which used to be a
hard-coded "Press Ctrl-C to close the session.") can now be configured
using the "welcome-message" setting in the config file or the
"--welcome-message" command line argument. The default value is the
beforementioned message, so without an explicit configuration the
behavior will be the same as before.

--- a/config.example.yml
+++ b/config.example.yml
@@ -97,5 +97,6 @@ tcp-load-balancer: false
 time-format: 2006/01/02 - 15:04:05
 verify-dns: true
 verify-ssl: true
+welcome-message: "Press Ctrl-C to close the session."
 whitelisted-countries: ""
 whitelisted-ips: ""
