Add proxy-ssl-termination option
Can be used when sish runs behind a reverse proxy to display HTTPS URLs despite running on the HTTP port

Signed-off-by: Nikolaos Karaolidis <nick@karaolidis.com>

--- a/config.example.yml
+++ b/config.example.yml
@@ -79,6 +79,7 @@ proxy-protocol-policy: use
 proxy-protocol-timeout: 200ms
 proxy-protocol-use-timeout: false
 proxy-protocol-version: "1"
+proxy-ssl-termination: false
 redirect-root: true
 redirect-root-location: https://github.com/antoniomika/sish
 rewrite-host-header: true
