--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,7 +34,8 @@ archives:
     wrap_in_directory: true
     format_overrides:
       - goos: windows
-        format: zip
+        formats:
+          - zip
     files:
       - LICENSE*
       - README*
