--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,7 +32,8 @@ archives:
     wrap_in_directory: true
     format_overrides:
       - goos: windows
-        format: zip
+        format:
+          - zip
     files:
       - LICENSE*
       - README*
